--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">OnHand</string>
+    <string name="not_connected">⚠️ You aren’t connected to the internet</string>
 </resources>
