filter progress - not working but see comments for follow up

--- a/core/common/src/main/res/values/strings.xml
+++ b/core/common/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="restore_item">Restore item</string>
 
     <!-- Ingredient Categories -->
+    <string name="category_all">All</string>
     <string name="category_dairy_eggs">Dairy &amp; Eggs</string>
     <string name="category_meat_seafood">Meat &amp; Seafood</string>
     <string name="category_produce">Produce</string>
